[package]
name = "advent-code-2019"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "0.4.0"
itertools = "0.8.2"
counter = "0.5.2"
cached = "0.26.2"
fraction = "0.9.0"
ordered-float = "2.8.0"
nalgebra = "0.30.0"
num = "0.4.0"